--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/test
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
